--- a/PA_ggeneral.Rmd
+++ b/PA_ggeneral.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 # Loading and preprocessing the data
 
 
-## 1. Load the data (i.e. read.csv())
+### 1. Load the data (i.e. read.csv())
 
 ```{r loadData, echo = TRUE}
 DataFileName <- "./activity.zip"
@@ -30,10 +30,10 @@ if (!file.exists(dataDir)) {
 data <- read.csv("./data/activity.csv", header = TRUE, sep = ",")
 data$date <- as.Date(data$date, format = "%Y-%m-%d")
 data1 <- na.omit(data)
-data1$date <- as.Date(data1$date, format = "%Y-%m-%d")
+#data1$date <- as.Date(data1$date, format = "%Y-%m-%d")
 ```
 
-## 2. Process/transform the data (if necessary) into a format suitable for your analysis
+### 2. Process/transform the data (if necessary) into a format suitable for your analysis
 
 ```{r transform, echo = TRUE}
 total <- as.numeric(nrow(data))
@@ -45,53 +45,66 @@ steps <- total_step$steps
 
 ```
 
-There are `r percent`% of missing values ommited.
+There are **`r percent`**% of missing values ommited.
 
 # What is mean total number of steps taken per day?
 
-## 1. Make a histogram of the total number of steps taken each day
+### 1. Make a histogram of the total number of steps taken each day
 ```{r}
 hist(steps, breaks = 30)
 ```
 
-## 2. Calculate and report the mean and median total number of steps taken per day
-```{r meanperday, echo = TRUE, results = "asis"}
+### 2. Calculate and report the mean and median total number of steps taken per day
 
-
-# 
-# library(xtable)
-# library(dplyr)
-# 
-promedio <- trunc(mean(total_step$steps))
-# 
-mediana <- median(total_step$steps)
-# 
-summary(data1$steps)
-# 
-# meanPerDay <- aggregate(steps ~ date, data1, mean)
-# names(meanPerDay)[2] <- "meanSteps"
-# medianPerDay <- aggregate(steps ~ date, data1, median)
-# names(medianPerDay)[2] <- "medianSteps"
-# summarySteps <- merge(meanPerDay,medianPerDay, all = TRUE)
-# tblMeanPerDay <- xtable(summarySteps)
-# #print(tblMeanPerDay,type = "html")
-
+### Summary of steps
+``` {r, comment=""}
+print(summary(data1$steps))
 
 ```
-The mean of total number of steps taken by day is `r promedio`
-
-The median of total number of steps taken by day is `r mediana`
 
 
+### Mean and median of steps by day
+```{r meanperday, echo = FALSE, results = "asis"}
 
-## What is the average daily activity pattern?
+library(xtable)
+library(dplyr)
+
+
+meanPerDay <- aggregate(steps ~ date, data1, mean)
+names(meanPerDay)[2] <- "meanSteps"
+medianPerDay <- aggregate(steps ~ date, data1, median)
+names(medianPerDay)[2] <- "medianSteps"
+summarySteps <- merge(meanPerDay,medianPerDay, all = TRUE)
+tblMeanPerDay <- xtable(summarySteps)
+tblMeanPerDay$date <- as.character(tblMeanPerDay$date)
+print(tblMeanPerDay,type = "html")
+
+```
+
+
+```{r}
+ 
+promedio <- trunc(mean(total_step$steps))
+mediana <- median(total_step$steps)
+```
+
+The mean of total number of steps taken  is **`r promedio`**
+
+The median of total number of steps taken is **`r mediana`**
+
+
+
+# What is the average daily activity pattern?
+
+
+### 1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+
 ```{r avgintervalperday, echo = TRUE, results = "asis"}
 library(ggplot2)
 library(dplyr)
 
 
 meanStepInterval <- aggregate(steps ~ interval, data1, mean)
-library(ggplot2)
 
 ggplot(meanStepInterval, aes(interval, steps)) +
   geom_line() +
@@ -104,20 +117,18 @@ maxStep <- maxStepInterval$steps
 
 ```
 
-2. Which 5-minute interval, on average across all the days in the dataset,
-contains the maximum number of steps?
+### 2. Which 5-minute interval, on average across all the days in the dataset,contains the maximum number of steps?
 
-A: The 5-minute interval that contains the maximum number of steps is `r maxInterval` with an average of `r maxStep` steps  
 
-## Imputing missing values
-Imputing missing values
+A: The 5-minute interval that contains the maximum number of steps is **`r maxInterval`** with an average of **`r maxStep`** steps  
+
+# Imputing missing values
 Note that there are a number of days/intervals where there are missing values
 (coded as NA). The presence of missing days may introduce bias into some
 calculations or summaries of the data.
 
 
-1. Calculate and report the total number of missing values in the dataset
-(i.e. the total number of rows with NAs)
+### 1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
 
 ```{r missingValues, echo = TRUE}
 total <- as.numeric(nrow(data))
@@ -127,16 +138,13 @@ percent <- trunc((total - valid)*100/total)
 steps <- data1$steps
 
 ```
-### There are `r missingValues` missing values, a `r percent`% of total values.
+ There are **`r missingValues`** missing values, a **`r percent`**% of total values.
 
 
-2. Devise a strategy for filling in all of the missing values in the dataset. The
-strategy does not need to be sophisticated. For example, you could use
-the mean/median for that day, or the mean for that 5-minute interval, etc.
+### 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could usethe mean/median for that day, or the mean for that 5-minute interval, etc.
 
 
-** We'll use the mean for 5 - minutes interval to fill the missing values in 
-dataset**
+We'll use the mean for 5 - minutes interval to fill the missing values in dataset
 
 ```{r devise, echo = TRUE}
 
@@ -146,27 +154,18 @@ prom_step <- aggregate(steps ~ interval, data, mean, na.rm = TRUE)
 
 ```
 
-3. Create a new dataset that is equal to the original dataset but with the
-missing data filled in.
+### 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
 
 ```{r new_dataset, echo = TRUE}
-
-
 
 for (i in prom_step$interval) {
     dato3[dato3$interval == i & is.na(dato3$steps), ]$steps <- 
         prom_step$steps[prom_step$interval == i]
 }
-head(dato3) # sin NAs
-
 
 ```
 
-4. Make a histogram of the total number of steps taken each day and Calculate
-and report the mean and median total number of steps taken per day. Do
-these values differ from the estimates from the first part of the assignment?
-What is the impact of imputing missing data on the estimates of the total
-daily number of steps?
+### 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
 
 ```{r hist_2, echo = TRUE}
@@ -180,13 +179,9 @@ hist(pasos, breaks = 30)
 ```
 
 
-5. Are there differences in activity patterns between weekdays and weekends?
-For this part the weekdays() function may be of some help here. Use the dataset
-with the filled-in missing values for this part.
+# Are there differences in activity patterns between weekdays and weekends? For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
 
-1. Create a new factor variable in the dataset with two levels – “weekday”
-and “weekend” indicating whether a given date is a weekday or weekend
-day.
+### 1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
 
 ```{r new_factor, echo = TRUE}
 
@@ -199,15 +194,10 @@ weekdays1 <- c('lunes', 'martes', 'miercoles', 'jueves', 'viernes')
 #convert to `factor` and specify the `levels/labels`
 dato4$wday <- factor((weekdays(dato4$date) %in% weekdays1), levels=c(FALSE, TRUE),labels=c('weekend', 'weekday'))
 
-
-         
 ```
          
 
-2. Make a panel plot containing a time series plot (i.e. type = "l") of the
-5-minute interval (x-axis) and the average number of steps taken, averaged
-across all weekday days or weekend days (y-axis). The plot should look
-something like the following, which was creating using simulated data:
+### 2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was creating using simulated data:
 
 
 ```{r panel_plot, echo = TRUE}
@@ -215,9 +205,8 @@ something like the following, which was creating using simulated data:
 
 finde <- aggregate(steps ~ wday + interval, mean,data = dato4)
 
-finde <- aggregate(.~ interval + wday, FUN = mean,data = dato4)
 
-str(finde)
+#str(finde)
 
 ggplot(finde,
        aes(x = interval, y = steps)) +
